[package]
name = "libsm"
version = "0.1.1"
authors = ["Nebula Moe <nebula_moe@outlook.com>", "Itachi <494521900@qq.com>"]

description = "A Rust Library of China's Standards of Encryption Algorithms (SM2/3/4)"
homepage = "https://github.com/NebulaMoe/libsm"
repository = "https://github.com/NebulaMoe/libsm"
readme = "README.md"
keywords = ["cipher", "cryptography"]
license = "GPL-3.0"

[dependencies]
rand = "0.4"
byteorder = "1"
num-bigint = "0.1"
num-traits = "0.2"
num-integer = "0.1"
yasna = "0.1.3"
